--- a/src/sections/experience/experience.astro
+++ b/src/sections/experience/experience.astro
@@ -6,7 +6,7 @@ import './experience.css';
 <section id="Experience" class="experience">
   <div class="ml-auto mr-auto mt-8 mb-8 flex justify-center items-center">
     <div class="w-3/4 sm:w-1/2">
-      <h1 class="sm:text-4xl">Experiencia</h1>
+      <h1 class="text-4xl">Experiencia</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
       </p>
