--- a/src/sections/header/Header.astro
+++ b/src/sections/header/Header.astro
@@ -16,7 +16,7 @@ const mainMenu = [
 	<div class="header__container">
 		<Logo name="Luis González"/>
 		<nav class="links"   tabindex="0.1">
-			<button class="menu__btn" >Menú</button>
+			<button class="menu__btn" ><iconify-icon icon="mingcute:menu-fill"></iconify-icon></button>
 			<ul class="header__list">
 				{
 					mainMenu.map((data) => (
@@ -26,9 +26,10 @@ const mainMenu = [
 									<iconify-icon
 										class="icons"
 										icon={data.icon}
-										width="20"
-										height="20"
 									/>
+									
+								</span>
+								<span class="menu_link_content">
 									{data.content}
 								</span>
 							</a>
