--- a/src/sections/projects/projects.astro
+++ b/src/sections/projects/projects.astro
@@ -6,7 +6,7 @@ import './projects.css';
 <section id="Projects" class="projects">
   <div class="ml-auto mr-auto mt-8 mb-8 flex justify-center items-center">
     <div class="w-3/4 sm:w-1/2">
-      <h1 class="sm:text-4xl">Proyectos</h1>
+      <h1 class="text-4xl">Proyectos</h1>
       <div class="w-full max-w-5xl mx-auto px-4 md:px-6 py-24">
         
       </div>
