--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,22 @@
+:root {
+	/* texto  */
+	--text-small: 1.2rem;
+	--text-medium: 1.4rem;
+	--text-large: 1.6rem;
+	--text-x-large: 2rem;
+	--text-xx-large: 3.1rem;
+	--text-xxx-large: 4.4rem;
+	--text-title: 2rem;
+	--text-general: 1.6rem;
+	--text-button: 1.2rem;
+}
+
 *{
 	box-sizing: border-box;
 }
 html {
 	scroll-behavior: smooth;
+	min-width:330px;
 }
 body {
     background-color: #f5f5f5;
