add experience section

--- a/src/sections/experience/experience.astro
+++ b/src/sections/experience/experience.astro
@@ -7,10 +7,117 @@ import './experience.css';
   <div class="ml-auto mr-auto mt-8 mb-8 flex justify-center items-center">
     <div class="w-3/4 sm:w-1/2">
       <h1 class="text-4xl">Experiencia</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-      </p>
-      <!-- <Boton href="#" texto="Quiero saber más"/> -->
+      <!-- component -->
+      <div class="container bg-gray-200 mx-auto w-full h-full">
+        <div class="relative wrap overflow-hidden p-10 h-full">
+          <div
+            class="border-2-2 absolute border-opacity-20 border-gray-700 h-full border"
+            style="left: 50%"
+          >
+          </div>
+          <!-- right timeline -->
+          <div
+            class="mb-8 flex justify-between items-center w-full right-timeline"
+          >
+            <div class="order-1 w-5/12"></div>
+            <div
+              class="z-10 flex items-center order-1 bg-black shadow-xl w-8 h-8 rounded-full"
+            >
+              <!-- <h1 class="mx-auto font-semibold text-lg text-white">1</h1> -->
+            </div>
+            <div
+              class="order-1 bg-gray-400 rounded-lg shadow-xl w-5/12 px-6 py-4"
+            >
+              <h2 class="mb-3 font-bold text-black text-xl">SOFTEC INNOVATION</h2>
+              <h5 class="font-bold text-gray">01/2024 - Presente</h5>
+              <h5 class="mb-3 font-bold text-gray">SENIOR DEVELOPER</h5>
+              <ul class="experience">
+                <li>Captura de requerimientos con el cliente sobre nuevos proyectos.</li>
+                <li>Documentación sobre las diferentes actualizaciones y cambios dentro de los proyectos.</li>
+                <li>Revisión de código.</li>
+                <li>Desarrollo de Landing Pages dirigidas a clientes de diferentes empresas con Angular, y mantenimiento y optimización de funciones y estilos en aplicaciones web.</li>
+                <li>Desarrollo de endpoints APl con Node Express.</li>
+                <li>Resolución de incidencias.</li>
+              </ul> 
+            </div>
+          </div>
+
+          <!-- left timeline -->
+          <div
+            class="mb-8 flex justify-between flex-row-reverse items-center w-full left-timeline"
+          >
+            <div class="order-1 w-5/12"></div>
+            <div
+              class="z-10 flex items-center order-1 bg-black shadow-xl w-8 h-8 rounded-full"
+            >
+              <!-- <h1 class="mx-auto text-white font-semibold text-lg">2</h1> -->
+            </div>
+            <div
+              class="order-1 bg-red-400 rounded-lg shadow-xl w-5/12 px-6 py-4"
+            >
+              <h2 class="mb-3 font-bold text-white text-xl">DIATOMEA TECHNOLOGY</h2>
+              <h5 class="font-bold text-gray">02/2022 - 01/2024</h5>
+              <h5 class="mb-3 font-bold text-gray">FULLSTACK DEVELOPER</h5>
+              <ul class="experience">
+                <li>Desarrollo de Landing Pages dirigidas a clientes de diferentes empresas con Angular.</li>
+                <li>Desarrollo de componentes y funcionalidades en React.</li>
+                <li>Desarrollo de endpoints API con Node Express.</li>
+                <li>Mantenimiento y optimización de estilos en aplicaciones web.</li>
+                <li>Desarrollando AWS Lambdas y usando Textract.</li>
+                <li>Resolución de incidencias.</li>
+              </ul> 
+            </div>
+          </div>
+
+          <!-- right timeline -->
+          <div
+            class="mb-8 flex justify-between items-center w-full right-timeline"
+          >
+            <div class="order-1 w-5/12"></div>
+            <div
+              class="z-10 flex items-center order-1 bg-black shadow-xl w-8 h-8 rounded-full"
+            >
+              <!-- <h1 class="mx-auto font-semibold text-lg text-white">3</h1> -->
+            </div>
+            <div
+              class="order-1 bg-gray-400 rounded-lg shadow-xl w-5/12 px-6 py-4"
+            >
+              <h2 class="mb-3 font-bold text-black text-xl">NETKIA</h2>
+              <h5 class="font-bold text-gray">12-2020- 02/2022</h5>
+              <h5 class="mb-3 font-bold text-gray">JUNIOR DEVELOPER</h5>
+              <ul class="experience">
+                <li>Desarrollo de Maquetación Web (Aplicaciones Web y Correos Electrónicos).</li>
+                <li>Mantenimiento y optimización de estilos en páginas web.</li>
+                <li>Desarrollo continuo de aplicaciones web con Angular.</li>
+              </ul> 
+            </div>
+          </div>
+
+          <!-- left timeline -->
+          <div
+            class="mb-8 flex justify-between flex-row-reverse items-center w-full left-timeline"
+          >
+            <div class="order-1 w-5/12"></div>
+            <div
+              class="z-10 flex items-center order-1 bg-black shadow-xl w-8 h-8 rounded-full"
+            >
+             <!--  <h1 class="mx-auto text-white font-semibold text-lg">4</h1> -->
+            </div>
+            <div
+              class="order-1 bg-red-400 rounded-lg shadow-xl w-5/12 px-6 py-4"
+            >
+              <h2 class="mb-3 font-bold text-white text-xl">FUNIBER</h2>
+              <h5 class="font-bold text-gray">09/2016 - 07/2020</h5>
+              <h5 class="mb-3 font-bold text-gray">JUNIOR DEVELOPER - INTERN</h5>
+              <ul class="experience">
+                <li>Diseño, desarrollo e implementación de aplicaciones web de gestión para optimizar procesos o tareas.</li>
+                <li>Mantenimiento y optimización de código en proyectos (Vue y React).</li>
+                <li>Captura de requerimientos de diferentes proyectos.</li>
+              </ul> 
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
