--- a/src/sections/header/Header.astro
+++ b/src/sections/header/Header.astro
@@ -6,7 +6,7 @@ import Logo from '../Logo.astro';
 const mainMenu = [
 	 {link:"#Technologies", content:"Tecnologías", icon:"octicon:dependabot-24"},
      {link:"#Projects", content:"Proyectos", icon:"octicon:rocket-24"},
-	 {link:"#Expereince", content:"Experiencia", icon:"octicon:briefcase-24"},
+	 {link:"#Experience", content:"Experiencia", icon:"octicon:briefcase-24"},
      //{link:"/#personal", content:"Personal", icon:"octicon:light-bulb-24"}
 ]
 ---
