--- a/src/sections/technologies/technologies.astro
+++ b/src/sections/technologies/technologies.astro
@@ -7,7 +7,7 @@ import "./technologies.css";
   <div class="ml-auto mr-auto mt-8 mb-8 flex justify-center items-center">
     <div class="w-3/4 sm:w-1/2">
       <h1 class="text-4xl">Tecnologías</h1>
-      <div class="w-full max-w-5xl mx-auto px-4 md:px-6 py-24">
+      <div class="w-full max-w-5xl mx-auto px-4 md:px-6 py-12 md:py-24">
         <div class="text-center">
           <!-- Logo Carousel animation -->
           <div 
@@ -18,36 +18,36 @@ import "./technologies.css";
               ul.nextSibling.setAttribute('aria-hidden', 'true');
           })"
           class="w-full inline-flex flex-nowrap overflow-hidden [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-200px),transparent_100%)]">
-            <ul x-ref="logos" class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll">
+            <ul x-ref="logos" class="flex items-center justify-center md:justify-start [&_li]:mx-2 [&_li]:md:mx-8 [&_img]:max-w-none animate-infinite-scroll">
                 <li >
-                    <img src="assets/angular.svg" alt="Angular" width="100"/>
+                    <img src="assets/angular.svg" class="tech-image" alt="Angular"/>
                 </li>
                 <li>
-                  <img src="assets/react.svg" alt="React" width="100"/>
+                  <img src="assets/react.svg" class="tech-image" alt="React"/>
                 </li>
                 <li>
-                  <img src="assets/vue.svg" alt="Vue" width="100"/>
+                  <img src="assets/vue.svg" class="tech-image" alt="Vue"/>
                 </li>
                 <li>
-                  <img src="assets/astro.svg" alt="Astro" width="100"/>
+                  <img src="assets/astro.svg" class="tech-image" alt="Astro"/>
                 </li>
                 <li>
-                  <img src="assets/tailwindcss.svg" alt="TailwindCSS" width="100"/>
+                  <img src="assets/tailwindcss.svg" class="tech-image" alt="TailwindCSS"/>
                 </li>
                 <li>
-                    <img src="assets/html.svg" alt="Html" width="100"/>
+                    <img src="assets/html.svg" class="tech-image" alt="Html"/>
                 </li>
                 <li>
-                    <img src="assets/css.svg" alt="CSS" width="100"/>
+                    <img src="assets/css.svg" class="tech-image" alt="CSS"/>
                 </li>
                 <li>
-                  <img src="assets/javascript.svg" alt="Javascript" width="100"/>
+                  <img src="assets/javascript.svg" class="tech-image" alt="Javascript"/>
                 </li>
                 <li>
-                  <img src="assets/typescript.svg" alt="Typescript" width="100"/>
+                  <img src="assets/typescript.svg" class="tech-image" alt="Typescript"/>
                 </li>
                 <li>
-                  <img src="assets/nodejs.svg" alt="Nodejs" width="100"/>
+                  <img src="assets/nodejs.svg" class="tech-image" alt="Nodejs"/>
               </li>
             </ul>
         </div>
