--- a/src/sections/technologies/technologies.astro
+++ b/src/sections/technologies/technologies.astro
@@ -5,8 +5,8 @@ import "./technologies.css";
 
 <section id="Technologies" class="technologies">
   <div class="ml-auto mr-auto mt-8 mb-8 flex justify-center items-center">
-    <div class="w-3/4 sm:w-1/2">
-      <h1 class="text-4xl">Tecnologías</h1>
+    <div class="w-full sm:w-3/4">
+      <h1 class="text-4xl font-bold text-center mb-8">Tecnologías</h1>
       <div class="w-full max-w-5xl mx-auto px-4 md:px-6 py-12 md:py-24">
         <div class="text-center">
           <!-- Logo Carousel animation -->
@@ -19,7 +19,7 @@ import "./technologies.css";
           })"
           class="w-full inline-flex flex-nowrap overflow-hidden [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-200px),transparent_100%)]">
             <ul x-ref="logos" class="flex items-center justify-center md:justify-start [&_li]:mx-2 [&_li]:md:mx-8 [&_img]:max-w-none animate-infinite-scroll">
-                <li >
+                <li>
                     <img src="assets/angular.svg" class="tech-image" alt="Angular"/>
                 </li>
                 <li>
@@ -50,10 +50,11 @@ import "./technologies.css";
                   <img src="assets/nodejs.svg" class="tech-image" alt="Nodejs"/>
               </li>
             </ul>
-        </div>
+          </div>
           <!-- End: Logo Carousel animation -->
         </div>
       </div>
     </div>
   </div>
 </section>
+
