--- a/src/sections/experience/experience.astro
+++ b/src/sections/experience/experience.astro
@@ -5,7 +5,7 @@ import './experience.css';
 
 <section id="Experience" class="experience">
   <div class="mx-auto mt-8 mb-8 flex justify-center items-center">
-    <div class="w-11/12 lg:w-3/4">
+    <div class="w-full ">
       <h1 class="text-3xl lg:text-4xl text-center font-bold mb-6">Experiencia</h1>
       <div class="container bg-gray-200 mx-auto w-full h-full">
         <div class="relative wrap overflow-hidden p-5 lg:p-10 h-full">
