fix card, and add details

--- a/src/sections/Footer/Footer.astro
+++ b/src/sections/Footer/Footer.astro
@@ -4,8 +4,10 @@ import SocialIcons from '../SocialIcons.astro';
 import './Footer.css';
 ---
 
-<footer class="ml-auto mr-auto flex justify-center">
-	<div class="footer__container w-auto">
-		<SocialIcons width="50" height="50" />
+<footer class="ml-auto mr-auto flex justify-center items-center py-6">
+	<div class="footer__container w-auto text-center">
+	  <p class="text-gray-500 text-sm">
+		"The only easy day was yesterday."
+	  </p>
 	</div>
-</footer>
+  </footer>
