--- a/src/sections/experience/experience.astro
+++ b/src/sections/experience/experience.astro
@@ -6,7 +6,7 @@ import './experience.css';
 <section id="Experience" class="experience">
   <div class="mx-auto mt-8 mb-8 flex justify-center items-center">
     <div class="w-full ">
-      <h1 class="text-3xl lg:text-4xl text-center font-bold mb-6">Experiencia</h1>
+      <h1 class="text-3xl lg:text-4xl text-center font-bold mb-6">Experience</h1>
       <div class="container bg-gray-200 mx-auto w-full h-full">
         <div class="relative wrap overflow-hidden p-5 lg:p-10 h-full">
           <!-- Línea central -->
@@ -32,17 +32,17 @@ import './experience.css';
                <!-- Información de texto -->
                <div class="flex flex-col items-center md:items-start">
                   <h2 class="mb-3 font-bold text-black text-xl">SOFTEC INNOVATION</h2>
-                  <h5 class="font-bold text-gray-600">01/2024 - Presente</h5>
+                  <h5 class="font-bold text-gray-600">01/2024 - Present</h5>
                   <h5 class="mb-3 font-bold text-gray-600">SENIOR DEVELOPER</h5>
                </div>
              </div>
               <ul class="list-disc pl-5">
-                <li>Captura de requerimientos con el cliente sobre nuevos proyectos.</li>
-                <li>Documentación sobre las diferentes actualizaciones y cambios dentro de los proyectos.</li>
-                <li>Revisión de código.</li>
-                <li>Desarrollo de Landing Pages dirigidas a clientes de diferentes empresas con Angular, y mantenimiento y optimización de funciones y estilos en aplicaciones web.</li>
-                <li>Desarrollo de endpoints APl con Node Express.</li>
-                <li>Resolución de incidencias.</li>
+                <li>Capturing requirements with the client about new projects.</li>
+                <li>Documentation on the different updates and changes within the projects.</li>
+                <li>Code Review.</li>
+                <li>Development of Landing Pages aimed at clients of different companies with Angular, and maintenance and optimization of functions and styles in web applications.</li>
+                <li>Development of API endpoints with NodeExpress.</li>
+                <li>Incidents resolution.</li>
               </ul>
             </div>
           </div>
@@ -74,12 +74,12 @@ import './experience.css';
           
               <!-- Lista de actividades -->
               <ul class="list-disc pl-5 text-white mt-4">
-                <li>Desarrollo de Landing Pages dirigidas a clientes de diferentes empresas con Angular.</li>
-                <li>Desarrollo de componentes y funcionalidades en React.</li>
-                <li>Desarrollo de endpoints API con Node Express.</li>
-                <li>Mantenimiento y optimización de estilos en aplicaciones web.</li>
-                <li>Desarrollando AWS Lambdas y usando Textract.</li>
-                <li>Resolución de incidencias.</li>
+                <li>Development of Landing Pages aimed at clients of different companies with Angular.</li>
+                <li>Development of components and functionalities in React.</li>
+                <li>Development of API endpoints with Node Express.</li>
+                <li>Maintenance and optimization of styles in web applications.</li>
+                <li>Developing AWS Lambdas and using Textract.</li>
+                <li>Incidents resolution.</li>
               </ul>
             </div>
           </div>
@@ -107,9 +107,9 @@ import './experience.css';
                </div>
              </div>
               <ul class="list-disc pl-5">
-                <li>Desarrollo de Maquetación Web (Aplicaciones Web y Correos Electrónicos).</li>
-                <li>Mantenimiento y optimización de estilos en páginas web.</li>
-                <li>Desarrollo continuo de aplicaciones web con Angular.</li>
+                <li>Web Layout development (Web applications and Emails).</li>
+                <li>Maintenance and optimization of styles in web pages.</li>
+                <li>Continuous web Application development with Angular.</li>
               </ul>
             </div>
           </div>
@@ -132,9 +132,9 @@ import './experience.css';
                </div>
              </div>
               <ul class="list-disc pl-5 text-white">
-                <li>Diseño, desarrollo e implementación de aplicaciones web de gestión para optimizar procesos o tareas.</li>
-                <li>Mantenimiento y optimización de código en proyectos (Vue y React).</li>
-                <li>Captura de requerimientos de diferentes proyectos.</li>
+                <li>Design, development and implementation of web applications to optimize processes or tasks.</li>
+                <li>Maintenance and optimization of code in projects (Vue and React).</li>
+                <li>Capture of requirements of different projects.</li>
               </ul>
             </div>
           </div>
