--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -2,15 +2,16 @@
 import './card.css';
 ---
 
-<div class="card h-full">
+<div class="card h-full bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 ease-in-out">
     <div class="card-header h-2/4">
-        <img src="https://static4.depositphotos.com/1013501/430/i/450/depositphotos_4308060-stock-photo-project.jpg" alt="Project 1">
+      <img class="w-full h-full object-cover" src="https://static4.depositphotos.com/1013501/430/i/450/depositphotos_4308060-stock-photo-project.jpg" alt="Project 1">
     </div>
-    <div class="car-body h-1/4">
-
-        <p>Card body</p>
+    <div class="card-body px-4 py-3">
+      <h3 class="text-xl font-semibold text-gray-800">Project Title</h3>
+      <p class="text-gray-600 mt-2">Card body description goes here. You can provide more details about the project.</p>
     </div>
-    <div class="card-footer h-1/4">
-        <p>Card footer</p>
+    <div class="card-footer px-4 py-3 bg-gray-100">
+      <p class="text-gray-500">Card footer content.</p>
     </div>
-</div>
+  </div>
+  
