--- a/src/sections/technologies/technologies.astro
+++ b/src/sections/technologies/technologies.astro
@@ -6,7 +6,7 @@ import "./technologies.css";
 <section id="Technologies" class="technologies">
   <div class="ml-auto mr-auto mt-8 mb-8 flex justify-center items-center">
     <div class="w-full sm:w-3/4">
-      <h1 class="text-4xl font-bold text-center mb-8">Tecnologías</h1>
+      <h1 class="text-4xl font-bold text-center mb-8">Technologies</h1>
       <div class="w-full max-w-5xl mx-auto px-4 md:px-6 py-12 md:py-24">
         <div class="text-center">
           <!-- Logo Carousel animation -->
