--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,12 @@ const { title } = Astro.props;
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Luis González | Fullstack Developer" />
+		<meta name="title" content="Luis González | Fullstack Developer" />
+		<meta property="og:title" content="Luis González | Fullstack Developer" />
+		<meta property="og:description" content="" />
+		<meta property="og:image" content="https://luisgonz.netlify.app/img/luisgonz-logo.svg" />
+		<meta property="og:url" content="https://luisgonz.netlify.app/" />
+		<meta property="og:type" content="website" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
