--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
 		<meta name="title" content="Luis González | Fullstack Developer" />
 		<meta property="og:title" content="Luis González | Fullstack Developer" />
 		<meta property="og:description" content="My professional portfolio: projects, skills and experience in frontend development." />
-		<meta property="og:image" content="assests/img/luisgonz-logo.png" />
+		<meta property="og:image" content="/img/luisgonz-logo.png" />
 		<meta property="og:url" content="https://luisgonz.netlify.app/" />
 		<meta property="og:type" content="website" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
