--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,12 @@ const { title } = Astro.props;
 		<meta property="og:image" content="/img/luisgonz-logo.png" />
 		<meta property="og:url" content="https://luisgonz.netlify.app/" />
 		<meta property="og:type" content="website" />
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Luis González | Fullstack Developer" />
+		<meta name="twitter:description" content="My professional portfolio: projects, skills and experience in frontend development." />
+		<meta name="twitter:image" content="/img/luisgonz-logo.png" />
+
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
