--- a/src/sections/presentation/presentation.astro
+++ b/src/sections/presentation/presentation.astro
@@ -8,7 +8,7 @@ import SocialIcons from '../SocialIcons.astro';
       <div class="ml-auto mr-auto mt-8 mb-8 flex justify-center items-center">
         <img
           class="presentation__img rounded-full"
-          src="/img/luis-profile-2.JPG"
+          src="/img/luisgonz-profile.webp"
           alt="Luis Gonzalez"
           width="300"
             height="300"
