update and add optimizations lighthouse chrome

--- a/src/sections/Footer/Footer.astro
+++ b/src/sections/Footer/Footer.astro
@@ -6,7 +6,7 @@ import './Footer.css';
 
 <footer class="ml-auto mr-auto flex justify-center items-center py-6">
 	<div class="footer__container w-auto text-center">
-	  <p class="text-gray-500 text-sm">
+	  <p style="color: #B7B7B7;">
 		"The only easy day was yesterday."
 	  </p>
 	</div>
