--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,8 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="title" content="Luis González | Fullstack Developer" />
-		<meta property="og:title" content="Luis González | Fullstack Developer" />
+		<meta name="description" content="Luis González | Fullstack Developer">
+		<meta property="og:title" content="My professional portfolio: projects, skills and experience in frontend development." />
 		<meta property="og:description" content="My professional portfolio: projects, skills and experience in frontend development." />
 		<meta property="og:image" content="/img/luisgonz-logo.png" />
 		<meta property="og:url" content="https://luisgonz.netlify.app/" />
@@ -22,7 +23,7 @@ const { title } = Astro.props;
 		<meta name="twitter:description" content="My professional portfolio: projects, skills and experience in frontend development." />
 		<meta name="twitter:image" content="/img/luisgonz-logo.png" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5"/>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
