--- a/src/sections/Footer/Footer.css
+++ b/src/sections/Footer/Footer.css
@@ -1,6 +1,6 @@
 footer {
     width: 100%;
-    background: 	#FFFFFF;
+    background: transparent;
     display: flex;
     justify-content: space-between;
     min-height: 20dvh;
