--- a/src/sections/Logo.astro
+++ b/src/sections/Logo.astro
@@ -7,9 +7,9 @@ const {name} = Astro.props;
         <img
             class="header__img"
             src="/img/luisgonz-logo.svg"
-            alt="luisgonz-img"
-            width="100px"
-            height="100px"
+            alt="luisgonz"
+            width="78px"
+            height="78px"
         />
     </div>
     <h3 class="color__gradiente header__title">
