--- a/src/sections/experience/experience.astro
+++ b/src/sections/experience/experience.astro
@@ -32,8 +32,8 @@ import './experience.css';
                <!-- Información de texto -->
                <div class="flex flex-col items-center md:items-start">
                   <h2 class="mb-3 font-bold text-black text-xl">SOFTEC INNOVATION</h2>
-                  <h5 class="font-bold text-gray-600">01/2024 - Present</h5>
-                  <h5 class="mb-3 font-bold text-gray-600">SENIOR DEVELOPER</h5>
+                  <h3 class="text-600">01/2024 - Present</h5>
+                  <h4 class="mb-3  text-600">SENIOR DEVELOPER</h5>
                </div>
              </div>
               <ul class="list-disc pl-5">
@@ -66,8 +66,8 @@ import './experience.css';
                 <!-- Información de texto -->
                 <div class="flex flex-col items-center md:items-start">
                   <h2 class="mb-3 font-bold text-white text-xl">DIATOMEA TECHNOLOGY</h2>
-                  <h5 class="font-bold text-white">02/2022 - 01/2024</h5>
-                  <h5 class="mb-3 font-bold text-white">FULLSTACK DEVELOPER</h5>
+                  <h3 class=" text-white">02/2022 - 01/2024</h5>
+                  <h4 class="mb-3 text-white">FULLSTACK DEVELOPER</h5>
                 </div>
           
               </div>
@@ -102,8 +102,8 @@ import './experience.css';
                <!-- Información de texto -->
                <div class="flex flex-col items-center md:items-start">
                   <h2 class="mb-3 font-bold text-black text-xl">NETKIA</h2>
-                  <h5 class="font-bold text-gray-600">12/2020 - 02/2022</h5>
-                  <h5 class="mb-3 font-bold text-gray-600">JUNIOR DEVELOPER</h5>
+                  <h3 class="text-600">12/2020 - 02/2022</h5>
+                  <h4 class="mb-3 text-600">JUNIOR DEVELOPER</h5>
                </div>
              </div>
               <ul class="list-disc pl-5">
@@ -127,8 +127,8 @@ import './experience.css';
                <!-- Información de texto -->
                <div class="flex flex-col items-center md:items-start">
                   <h2 class="mb-3 font-bold text-white text-xl">FUNIBER</h2>
-                  <h5 class="font-bold text-white">09/2016 - 07/2020</h5>
-                  <h5 class="mb-3 font-bold text-white">JUNIOR DEVELOPER - INTERN</h5>
+                  <h3 class="text-white">09/2016 - 07/2020</h5>
+                  <h4 class="mb-3 text-white">JUNIOR DEVELOPER - INTERN</h5>
                </div>
              </div>
               <ul class="list-disc pl-5 text-white">
